# tree-mac

./: .gitignore  install.sh
include/: bloom_filter.hpp  cluster.hpp  distance.hpp  primary_tree.hpp  read.hpp  sec_tree.hpp  similarity_status.hpp  stats.hpp  tidy_tree.hpp
source/: CMakeLists.txt  main.cpp  primary_tree_main.cpp  primary_tree_main_cmdline.hpp  test_main.cpp  tree_main.cpp  tree_main_cmdline.hpp
test/: prim-silva-k9-w100-s5-b1984-single-s80-l14.txt  toy-s80-l40.txt
test/prim/: clusters.txt  tree.txt
